Fixed viewport height issue on mobile devices
Todolist section displayed without any overflow now. Header has a fixed height of 70px and autocomplete is disabled for todolist input for better experience.

--- a/client/src/styles/_header.scss
+++ b/client/src/styles/_header.scss
@@ -2,8 +2,7 @@
   @include primary-background;
   @include light-text;
   position: relative;
-  height: 10vh;
-  min-height: 60px;
+  height: 70px;
   box-shadow: 0 5px 5px -5px $dark-color;
 
   .container {
